--- a/Diseñador Freelancer/index.html
+++ b/Diseñador Freelancer/index.html
@@ -9,6 +9,8 @@
   <body>
 
 <h1>Eduardo Granados Freelancer</h1>
-
+<h2>Este es un heading2</h2>
+<h3>Este es un heading3</h3>
+<h6>Este es el mas pequeño</h6>
   </body>
 </html>
