--- a/Diseñador Freelancer/index.html
+++ b/Diseñador Freelancer/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
+
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
@@ -21,7 +24,6 @@
   <a href="#">Clientes</a>
   <a href="#">Contacto</a>
 </nav>
-
 
 
 <section>
